# AudioRouter

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release-windows.yml
.serena/: project.yml
.trae/skills/release-version-bumper/: SKILL.md
AudioRouter/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
AudioRouter/src/: App.vue  main.ts
AudioRouter/src-tauri/: Cargo.toml  tauri.conf.json
AudioRouter/src-tauri/capabilities/: default.json
AudioRouter/src-tauri/src/: command.rs  lib.rs  main.rs  types.rs
AudioRouter/src/assets/: main.css
AudioRouter/src/components/: DeviceCard.vue  SettingsModal.vue  TitleBar.vue
AudioRouter/src/components/icons/: CheckmarkIcon.vue  CloseIcon.vue  MinusIcon.vue  PlayIcon.vue  SettingsIcon.vue  StopIcon.vue
AudioRouter/src/i18n/: index.ts
AudioRouter/src/i18n/locales/: en.json
AudioRouter/src/utils/: ipc.ts  update.ts
app_core/: Cargo.toml
app_core/src/: autostart.rs  controller.rs  lib.rs  update.rs
app_core/src/i18n/: en.rs  mod.rs  zh.rs
audio_core/: Cargo.toml
audio_core/src/: channel_mixer.rs  com_worker.rs  device_watcher.rs  lib.rs  router.rs  utils.rs
audio_core/src/com_service/: device.rs  mod.rs  router.rs  watcher.rs
audio_core/src/router/: config.rs  mod.rs  state.rs  worker.rs
audio_router/: Cargo.toml  build.rs
audio_router/src/: app.rs  autostart.rs  controller.rs  fonts.rs  main.rs  slint_app.rs  tray.rs  update.rs
audio_router/src/i18n/: en.rs  mod.rs  zh.rs
audio_router/src/views/: device_list.rs  mod.rs  settings.rs
audio_router/src/widgets/: device_card.rs  mod.rs
audio_router/ui/: main.slint  tray_popup.slint
audio_router_tauri/: index.html  package-lock.json
audio_router_tauri/src-tauri/: Cargo.toml  tauri.conf.json
audio_router_tauri/src-tauri/capabilities/: default.json
audio_router_tauri/src-tauri/src/: command.rs  lib.rs  main.rs  types.rs
audio_router_tauri/src-tauri/windows/: hooks.nsh
audio_router_tauri/src/components/icons/: MaximizeIcon.vue  RefreshIcon.vue  RestoreIcon.vue
audio_router_tauri/src/i18n/locales/: zh.json
audio_router_tauri/src/utils/: language.ts
config/: Cargo.toml
config/src/: config.rs  lib.rs
installer/: AudioRouter.iss
scripts/: build-installer.ps1  publish.ps1
winui3_gui/: Cargo.toml  build.rs
winui3_gui/src/: app.rs  main.rs  pane_bg_override.rs  tray.rs  update.rs  window_utils.rs
