[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[dependencies]
audio_core = { path = "../audio_core" }
config = { path = "../config" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
ureq = { version = "3", features = ["json"] }
semver = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Registry",
  "Win32_Foundation",
] }
