[package]
name = "audio_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
log = "0.4"
arc-swap = "1.6"
config = { path = "../config" }
windows = { version = "0.48.0", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Devices",
  "Win32_Devices_Properties",
  "implement",
] }

futures = "0.3"
once_cell = "1"
tokio = { version = "1.49.0", features = ["full"] }
callcomapi_macros = "0.1.1"
callcomapi_runtime = "0.1.1"

[dev-dependencies]
tempfile = "3.3"
toml = "0.7"
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "test-util",
  "macros",
] }
