[package]
name = "audio_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
log = "0.4"
config = { path = "../config" }
windows = { version = "0.48.0", features = [
  "Win32_Media_Audio",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Foundation",
  "Win32_System_Memory",
  "Win32_Devices",
  "Win32_Devices_Properties",
  "implement",
] }

callcomapi = "0.1.3"

[dev-dependencies]
tokio = { version = "1.49.0", features = [
  "rt-multi-thread",
  "sync",
  "time",
  "test-util",
  "macros",
] }
