[package]
name = "audio_router"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI
eframe = "0.31"
egui = "0.31"

# 原有核心库
audio_core = { path = "../audio_core" }
config = { path = "../config" }
anyhow = "1"

# 系统托盘
tray-icon = "0.19"

# Windows 自启动（注册表操作）
windows = { version = "0.58", features = [
  "Win32_System_Registry",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }

# HTTP 请求（版本更新检查）
ureq = { version = "3", features = ["json"] }

# 工具
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
chrono = "0.4"

# 图像加载（托盘图标、窗口图标）
image = "0.25"

# 跨平台字体加载
font-kit = "0.14"
