[package]
name = "audio_router"
version = "0.1.0"
edition = "2024"

[dependencies]

# 原有核心库
audio_core = { path = "../audio_core" }
config = { path = "../config" }
anyhow = "1"

# 系统托盘
tray-icon = "0.19"

# Windows 自启动（注册表操作）
windows = { version = "0.58", features = [
  "Win32_System_Registry",
  "Win32_Foundation",
  "Win32_UI_Shell",
] }

# HTTP 请求（版本更新检查）
ureq = { version = "3", features = ["json"] }

# 工具
serde = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

# 图像加载（托盘图标、窗口图标）
image = { version = "0.25", default-features = false, features = ["png"] }
slint = "1.16.1"

# 启用 LSTM 分词模型，支持日语等 CJK 语言的正确换行
icu_segmenter = { version = "2.1.2", features = ["auto"] }

[build-dependencies]
slint-build = "1.16.1"
winresource = { version = "0.1.31", default-features = false }
