[package]
name = "winui3_gui"
version = "0.3.2"
edition = "2021"
rust-version = "1.95"

[dependencies]
app_core = { path = "../app_core" }
audio_core = { path = "../audio_core" }
config = { path = "../config" }
windows-reactor = { git = "https://github.com/microsoft/windows-rs", rev = "f0a52dd530fce4fbcee7e9d8594df019e4302ea2" }
windows-core = { version = "0.62.2", features = ["std"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
dark-light = "2"
tray-icon = "0.19"
image = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
windows-reactor-setup = { git = "https://github.com/microsoft/windows-rs", rev = "f0a52dd530fce4fbcee7e9d8594df019e4302ea2" }
